--- a/advanced-html-css/animation/01-button-hover/style.css
+++ b/advanced-html-css/animation/01-button-hover/style.css
@@ -16,4 +16,16 @@ button {
   font-size: 18px;
   padding: 16px 24px;
   text-align: center;
+  transition: 0.5s all ease 0s;
+}
+
+button:hover {
+  border-radius: 12px;
+  border: none;
+  background-color: #2563eb;
+  color: white;
+  font-size: 27px;
+  padding: 24px 36px;
+  text-align: center;
+  transition: 0.5s all ease 0s;
 }
