--- a/advanced-html-css/animation/02-pop-up/style.css
+++ b/advanced-html-css/animation/02-pop-up/style.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 * {
   padding: 0;
   margin: 0;
+  font-family: 'Montserrat', serif;
 }
 
 body {
@@ -35,8 +38,10 @@ button {
   top: 50%;
   left: 50%;
   transform-origin: center;
-  transform: translate(-50%, -50%);
-  pointer-events: none;
+  transform: translate(-50%, -200%);
+  transition: 
+  transform 500ms ease-in-out 0s,
+  opacity 500ms ease-in-out 0s;
   opacity: 0%;
   text-align: center;
 }
@@ -56,8 +61,15 @@ button {
 .popup-modal.show {
   opacity: 100%;
   pointer-events: all;
+  transform: translate(-50%, -50%);
 }
 
 .backdrop.show {
   opacity: 30%;
+}
+
+/* my solution */
+
+.popup-modal {
+  
 }
