--- a/foundations/cascade/01-cascade-fix/style.css
+++ b/foundations/cascade/01-cascade-fix/style.css
@@ -8,8 +8,8 @@ body {
   font-weight: 800;
 }
 
-.small-para {
-  font-size: 14px;
+.para.small-para {
+  font-size: 12px;
   font-weight: 800;
 }
 
@@ -23,13 +23,20 @@ body {
   font-weight: bold;
 } 
 
+#confirm-button {
+  background: green;
+  color: white;
+  font-weight: bold;
+}
+
+
 .button {
   background-color: rgb(255, 255, 255);
   color: rgb(0, 0, 0);
   font-size: 20px;
 }
 
-.child {
+.text.child {
   color: rgb(0, 0, 0);
   font-weight: 800;
   font-size: 14px;
