--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,6 +12,9 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .profile-image {
@@ -29,6 +32,14 @@ body {
   font-style: italic;
 }
 
+.left {
+  display: flex;
+}
+
+.right {
+  display: flex;
+}
+
 button {
   border: none;
   border-radius: 8px;
@@ -41,8 +52,10 @@ a {
   /* this removes the line under our links */
   text-decoration: none;
   color: rebeccapurple;
+  padding: 7px;
 }
 
 ul {
   list-style-type: none;
+  display: flex;
 }
