--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -4,9 +4,18 @@ html, body {
   height: 100%;
 }
 
+.header {
+  font-weight: bold;
+  font-size: large;
+}
+
+.text {
+  padding-block: 10px;
+}
+
 body {
   font-family: Roboto, sans-serif;
-  margin: 0;
+  margin: 0px;
   background: #aaa;
   color: #333;
   /* I'll give you this one for free lol */
@@ -20,6 +29,9 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  padding: 15px;
+  gap: 20px
 }
 
 .icon {
@@ -33,6 +45,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
 }
 
 .close-button {
@@ -48,6 +61,7 @@ body {
   justify-content: center;
   border: 1px solid #eee;
   padding: 0;
+  flex-shrink:0;
 }
 
 button {
