--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -3,12 +3,18 @@
 body {
   height: 100vh;
   margin: 0;
+  padding 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content:space-between;
+
 }
 
 img {
   width: 600px;
+  align-self: center;
 }
 
 button {
@@ -23,4 +29,51 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+}
+
+ul {
+  list-style-type: none;
+  display: flex;
+  gap: 10px;
+  font-size: medium;
+  padding: 5px;
+  margin: 10px
+}
+
+a {
+  text-decoration: none;
+  color: grey
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.input {
+  display: flex;
+  justify-content: center;
+}
+
+button {
+  padding-inline: 15px;
+  padding-block: 7px
+}
+
+.buttons {
+  display: flex;
+  justify-content: center;
+  gap: 5px;
+}
+
+.footer {
+  background-color: #eeeeee;
+  display: flex;
+  justify-content: space-between;
 }
