--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -2,28 +2,72 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  padding: 0;
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  display: flex;
+  font-size: 32px;
+  font-weight: 900;
+  align-items: center;
+  padding-left: 16px;
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
-}
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-.sidebar {
-  width: 300px;
-  background: royalblue;
-  box-sizing: border-box;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  max-width: 300px;
+  padding: 14px;
+  margin: 10px
+}
+
+.interface {
+  display: flex;
+  flex-grow: 1;
+}
+
+.card-holder {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 48px;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+ul a {
+  text-decoration: none;
+  color: white;
+  font-size: 24px;
+  display: flex;
+  margin-bottom: 16px;
+  
+}
+
+.sidebar {
+  width: 300px;
+  background: royalblue;
+  box-sizing: border-box;
+  display: flex;
+  flex-shrink: 0;
+  max-width: 300px;
+  padding-left: 16px;
 }
