--- a/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
+++ b/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
@@ -9,6 +9,11 @@ html {
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-template-rows: 1fr 4fr 1fr;
+  gap: 15px;
+  
 }
 
 .container div {
@@ -22,14 +27,19 @@ html {
 
 .header {
   background-color: #006157;
+  grid-column: 1 / 4;
 }
 
 .sidebar {
   background-color: #005B94;
+  grid-row: 2 / 4;
+
 }
 
 .nav {
   background-color: #642cde;
+  grid-column: 2 / 4;
+  grid-row: 2;
 }
 
 .article {
@@ -38,6 +48,7 @@ html {
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1 / 4;
 }
 
 .article p {
