--- a/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
+++ b/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
@@ -5,6 +5,12 @@
 
 .container {
   text-align: center;
+  display: grid;
+  grid-template-areas: 
+  "header header"
+  "sidebar content" 
+  "footer footer";
+  gap: 4px;
 }
 
 .container div {
@@ -17,15 +23,42 @@
 
 .header {
   background-color: #393f4d;
+  grid-area: header;
+  display: grid;
+  grid-template-areas: "logo list";
+  align-items: center;
+  
 }
 
-.menu ul,
-.menu li {
+.logo {
+  grid-area: logo;
+  justify-self: start;
+}
+
+.menu ul {
   font-size: 16px;
+  list-style: none;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  justify-content: space-around;
+}
+
+.menu {
+  grid-area: list;
 }
 
 .sidebar {
   background-color: #C50208;
+  grid-area: sidebar;
+  display: grid;
+  grid-template-rows: repeat(4, 100px);
+  gap: 50px;
+}
+
+.content {
+  grid-area: content;
+  display: grid;
+  grid-template-rows: auto 1fr;
 }
 
 .sidebar .photo {
@@ -34,6 +67,7 @@
   font-size: 12px;
   font-weight: normal;
   border-radius: 10px;
+  align-content: center;
 }
 
 
@@ -42,19 +76,26 @@
   color: black;
   font-size: 16px;
   font-weight: normal;
+  align-content: center;
 }
 
 .nav {
   background-color: #C50208;
 }
 
-.nav ul li {
+.nav ul{
   font-size: 16px;
   text-transform: uppercase;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  list-style: none;
 }
 
 .article {
   background-color: #bccbde;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 15px;
 }
 
 .article p {
@@ -83,6 +124,7 @@
 
 .footer {
   background-color: #393f4d;
+  grid-area: footer;
 }
 
 .footer p {
